objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Demo_Copodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Copodo</label>
        <referenceTo>Demo_Copodo__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Phone__c</fullName>
        <label>Student Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Branch__c</fullName>
        <label>Student Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>MEC</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Students_Birth__c</fullName>
        <label>Students Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Students_Count__c</fullName>
        <displayFormat>S-{000}</displayFormat>
        <label>Students Count</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>